--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.20",
@@ -26,6 +27,7 @@
     "qrcode": "^1.5.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "^2.13.3",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
