--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.15.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
