--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
