--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.6",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
+    "express-rate-limit": "^7.5.0",
     "lucide-react": "^0.462.0",
     "next": "14.1.0",
     "next-themes": "^0.4.3",
