--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@dnd-kit/core": "^6.2.0",
     "@dnd-kit/sortable": "^9.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -22,12 +23,14 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
     "axios": "^1.8.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "express-rate-limit": "^7.5.0",
     "lucide-react": "^0.462.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "prisma": "^6.0.0",
     "react": "^18.2.0",
