--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -30,7 +31,7 @@
     "express-rate-limit": "^7.5.0",
     "lucide-react": "^0.462.0",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.4.3",
     "prisma": "^6.0.0",
     "react": "^18.2.0",
