--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
+    "date-fns": "^4.1.0",
     "express-rate-limit": "^7.5.0",
     "lucide-react": "^0.462.0",
     "next": "14.1.0",
