--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "express-rate-limit": "^7.5.0",
     "lucide-react": "^0.462.0",
     "next": "14.1.0",
